--- a/are-esg-investments-what-you-expect/index.html
+++ b/are-esg-investments-what-you-expect/index.html
@@ -6,14 +6,13 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Sustainable Money - ESG Investments</title>
-  <meta name="description" content="A hard look at what is the typical fund touted as Sustainable investing, and considerations as to whether
-              they are helping an investor achieve their goals.">
+  <meta name="description" content="A hard look at what is the typical fund touted as Sustainable investing, and considerations as to whether they are helping an investor achieve their goals.">
   <meta name="author" content="Stephanie Hutson">
 
-  <meta property="og:image" content="http://sustainable.money/images/esg-banner.png"/>
+  <meta property="og:image" content="http://sustainable.money/images/splilling_pennies.jpg"/>
   <meta property="og:title" content="Sustainable Investing, What It Is and What It Isn't"/>
   <meta property="og:description" content="A hard look at what is the typical fund touted as Sustainable investing, and considerations as to whether"/>
-  <meta property="twitter:image" content="//sustainable.money/images/esg-banner.png"/>
+  <meta property="twitter:image" content="http://sustainable.money/images/splilling_pennies.jpg"/>
   <meta property="twitter:title" content="Sustainable Investing, What It Is and What It Isn't"/>
   <meta property="twitter:description" content="              they are helping an investor achieve their goals."/>
 
@@ -108,7 +107,7 @@
           where their mouth is when they say that want to stop climate change and social injustice. They
           certainly are advertised as such by many popular media sources<sup><a href="#3" class="footerlink">3</a></sup>.
           One might want to offload the work of finding which renewable resource companies are
-          actually making things work, and which have more business models. Perhaps, and these are the
+          actually making things work, and which have weak business models. Perhaps, and these are the
           people who will be least surprised by the assets found in traditional ESG funds, they want a
           fund that looks a lot like other Growth Stock funds, but with a few things removed.
         </p>
