Add 4 hour work week, Essentialism, who gets what

--- a/books-so-far/index.html
+++ b/books-so-far/index.html
@@ -127,6 +127,27 @@
             Ronald Kahn's "The Value Investors" might not be 5 stars for everyone, but for me it really hit the spot. It's an interview book, but unlike The Passion Economy another recent interview book that garnered only two stars, Kahn does not attempt to disguise what he is writing about as something more than speaking to interesting people (who also happen to be very successful value investors) about their backgrounds. Based on a glance at some other reviews of the book, several of the value investors in the book are very well known and perhaps someone who is actually in finance would find it silly and "heavy on the philosophy, light on the strategy", however as someone not in the industry, I found the look into the investor's upbringings and philosophies to be rather enlightening. Kahn does also state very clearly early on that the book is not for those looking for value investing strategy.
           </p>
         </div>
+        <div class="book">
+          <p class="title">The 4 Hour Work Week</p>
+          <p class="rating">⭐</p>
+          <p class="recommendation">
+            I was unable to finish this book before being so utterly annoyed with the author's arrogance. If you're willing to manipulate your friends and coworkers, force everyone around you to work around your schedule that only benefits you, and succeed only through semantics, then this book is for you. The one good point that I found useful was that often times people see a problem and make a feeble attempt at solving it before allowing it to persist, while it's often useful to not allow the status quo to define the future.
+          </p>
+        </div>
+        <div class="book">
+          <p class="title">Essentialism</p>
+          <p class="rating">⭐⭐⭐⭐</p>
+          <p class="recommendation">
+            <a href="https://www.goodreads.com/book/show/18077875-essentialism">Essentialism</a>, by Greg McKeown addresses several of the same issues as the 4 Hour Work Week, but in a way that allows you to respect the people around you. As many lifestyle design books do, it does occasionally get a little woo woo, and the line "Non-Essentialists do this, but <i>Essentialists</i> do that" was uttered a few too many times. Regardless, the book provides a nice framework for rethinking how to organize your time and priorities so you can not only be more productive but also more balanced and lead a sustainable (in the work life balance sense) life.
+          </p>
+        </div>
+        <div class="book">
+          <p class="title">Who Gets What -- and Why</p>
+          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <p class="recommendation">
+            Alvin E. Roth's <a href="https://www.goodreads.com/book/show/22749723-who-gets-what-and-why">Who Gets What</a> was a fascinating read that dives into the economic theory of matching two or more things. Coming from a non-economic background I found the book both accessible as well as detailed in it's explanations of the difficulties that arise from poor market design when both parties care who the other is (from school admissions to kidney transplants). Reading the title of the book (at least without the subtitle <b>The New Economics of Matchmaking and Market Design</b>) one might have suspected that the book would have more of a social-economic nature discussing the advantages of wealth, but don't be fooled, it's actually just a really good primer for game theory and market design.
+          </p>
+        </div>
       </div>
     </div>
   </div>
