Fix navbar links

--- a/100-companies-and-misleading-carbon-attribution/index.html
+++ b/100-companies-and-misleading-carbon-attribution/index.html
@@ -58,10 +58,10 @@
         <a href="/">Main</a>
       </li>
       <li>
-        <a href="about/">About</a>
+        <a href="/about/">About</a>
       </li>
       <li>
-        <a href="books-so-far/">Books Read So Far</a>
+        <a href="/books-so-far/">Books Read So Far</a>
       </li>
     </ul>
   </nav>
