--- a/the-inner-level-and-inequality/index.html
+++ b/the-inner-level-and-inequality/index.html
@@ -55,10 +55,10 @@
         <a href="/">Main</a>
       </li>
       <li>
-        <a href="about/">About</a>
+        <a href="/about/">About</a>
       </li>
       <li>
-        <a href="books-so-far/">Books Read So Far</a>
+        <a href="/books-so-far/">Books Read So Far</a>
       </li>
     </ul>
   </nav>
