--- a/books-so-far/index.html
+++ b/books-so-far/index.html
@@ -148,6 +148,13 @@
             Alvin E. Roth's <a href="https://www.goodreads.com/book/show/22749723-who-gets-what-and-why">Who Gets What</a> was a fascinating read that dives into the economic theory of matching two or more things. Coming from a non-economic background I found the book both accessible as well as detailed in it's explanations of the difficulties that arise from poor market design when both parties care who the other is (from school admissions to kidney transplants). Reading the title of the book (at least without the subtitle <u>The New Economics of Matchmaking and Market Design</u>) one might have suspected that the book would have more of a social-economic nature discussing the advantages of wealth, but don't be fooled, it's actually just a really good primer for game theory and market design.
           </p>
         </div>
+        <div class="book">
+          <p class="title">Saving Capitalism: For the Many, Not the Few</p>
+          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <p class="recommendation">
+            Robert Reich's <a href="https://www.goodreads.com/book/show/24338377-saving-capitalism">Saving Capitalism</a> explores how we as a Nation can re-establish a form of capitalism that works for everyone rather those who already have the most wealth. His key points can be summarized as such: 1) Big vs. Small government is a distraction, what should be focused on is who has a say in policy 2) Our growing inequality is unsustainable 3) Stop corporate campaign finance and 4) in for the curve ball right at the end, there should be universal basic income. Reich lays out his arguments thoroughly and convincingly. It does make me think for my next book I should read an author whom I don't agree with on pretty much everything however.
+          </p>
+        </div>
       </div>
     </div>
   </div>
