remove sustainable.money

--- a/100-companies-and-misleading-carbon-attribution/index.html
+++ b/100-companies-and-misleading-carbon-attribution/index.html
@@ -10,11 +10,11 @@
   emissions is misleading and designed to make you mad at everyone but yourself.">
   <meta name="author" content="Stephanie Hutson">
 
-  <meta property="og:image" content="http://sustainable.money/images/partisan-data.png"/>
+  <meta property="og:image" content="http://sustainablemoney.github.io/images/partisan-data.png"/>
   <meta property="og:title" content="100 Companies and the Emissions they are Supposed to be Responsible For"/>
   <meta property="og:description" content="Why saying 100 companies are responsible for 71% of global
   emissions is misleading and designed to make you mad at everyone but yourself."/>
-  <meta property="twitter:image" content="//sustainable.money/images/partisan-data.png"/>
+  <meta property="twitter:image" content="//sustainablemoney.github.io/images/partisan-data.png"/>
   <meta property="twitter:title" content="100 Companies and the Emissions they are Supposed to be Responsible For"/>
   <meta property="twitter:description" content="Why saying 100 companies are responsible for 71% of global
   emissions is misleading and designed to make you mad at everyone but yourself."/>
@@ -130,7 +130,7 @@
     <div>
       <p><a href="signup/">Sign up for our email list!</a></p>
       <p>
-        <b>Have feedback?</b> Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a>
+        <b>Have feedback?</b> Email me at <a href="mailto:stephanie.m.hutson@gmail.com">stephanie.m.hutson@gmail.com</a>
       </p>
     </div>
   </div>
