--- a/about/index.html
+++ b/about/index.html
@@ -9,10 +9,10 @@
   <meta name="description" content="An exploration of what it takes - and whether it is possible - to balance a strong economy with environmental and social sustainability.">
   <meta name="author" content="Stephanie Hutson">
 
-  <!-- <meta property="og:image" content="//sustainable.money/images/pourover-mug.jpg"/>
+  <!-- <meta property="og:image" content="//sustainablemoney.github.io/images/pourover-mug.jpg"/>
   <meta property="og:title" content="How Bad is my Coffee?"/>
   <meta property="og:description" content="A look into the carbon efficency of making a cup of coffee and a breif review of the book How Bad are Bananas?"/>
-  <meta property="twitter:image" content="//sustainable.money/images/pourover-mug.jpg"/>
+  <meta property="twitter:image" content="//sustainablemoney.github.io/images/pourover-mug.jpg"/>
   <meta property="twitter:title" content="How Bad is my Coffee?"/>
   <meta property="twitter:description" content="A look into the carbon efficency of making a cup of coffee and a breif review of the book How Bad are Bananas?"/> -->
   <meta name="author" content="Stephanie Hutson"/>
@@ -104,7 +104,7 @@
     <div>
       <p><a href="signup/">Sign up for our email list!</a></p>
       <p>
-        <b>Have feedback?</b> Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a>
+        <b>Have feedback?</b> Email me at <a href="mailto:stephanie.m.hutson@gmail.com">stephanie.m.hutson@gmail.com</a>
       </p>
     </div>
   </div>
