--- a/are-esg-investments-what-you-expect/index.html
+++ b/are-esg-investments-what-you-expect/index.html
@@ -9,10 +9,10 @@
   <meta name="description" content="A hard look at what is the typical fund touted as Sustainable investing, and considerations as to whether they are helping an investor achieve their goals.">
   <meta name="author" content="Stephanie Hutson">
 
-  <meta property="og:image" content="http://sustainable.money/images/splilling_pennies.jpg"/>
+  <meta property="og:image" content="http://sustainablemoney.github.io/images/splilling_pennies.jpg"/>
   <meta property="og:title" content="Sustainable Investing, What It Is and What It Isn't"/>
   <meta property="og:description" content="A hard look at what is the typical fund touted as Sustainable investing, and considerations as to whether"/>
-  <meta property="twitter:image" content="http://sustainable.money/images/splilling_pennies.jpg"/>
+  <meta property="twitter:image" content="http://sustainablemoney.github.io/images/splilling_pennies.jpg"/>
   <meta property="twitter:title" content="Sustainable Investing, What It Is and What It Isn't"/>
   <meta property="twitter:description" content="              they are helping an investor achieve their goals."/>
 
@@ -272,7 +272,7 @@
     <div>
       <p><a href="signup/">Sign up for our email list!</a></p>
       <p>
-        <b>Have feedback?</b> Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a>
+        <b>Have feedback?</b> Email me at <a href="mailto:stephanie.m.hutson@gmail.com">stephanie.m.hutson@gmail.com</a>
       </p>
     </div>
   </div>
