--- a/04082020-World-of-three-zeros/index.html
+++ b/04082020-World-of-three-zeros/index.html
@@ -145,7 +145,7 @@
     <div>
       <p>
         <b>Have feedback?</b></br>
-        Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a>
+        Email me at <a href="mailto:stephanie.m.hutson@gmail.com">stephanie.m.hutson@gmail.com</a>
       </p>
     </div>
   </div>
