--- a/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
+++ b/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
@@ -7,10 +7,10 @@
   <meta charset="utf-8">
   <title>Sustainable Money - How bad is my coffee?</title>
   <meta name="description" content="A look into the carbon efficency of making a cup of coffee and a breif review of the book How Bad are Bananas?"/>
-  <meta property="og:image" content="//sustainable.money/images/pourover-mug.jpg"/>
+  <meta property="og:image" content="//sustainablemoney.github.io/images/pourover-mug.jpg"/>
   <meta property="og:title" content="How Bad is my Coffee?"/>
   <meta property="og:description" content="A look into the carbon efficency of making a cup of coffee and a breif review of the book How Bad are Bananas?"/>
-  <meta property="twitter:image" content="//sustainable.money/images/pourover-mug.jpg"/>
+  <meta property="twitter:image" content="//sustainablemoney.github.io/images/pourover-mug.jpg"/>
   <meta property="twitter:title" content="How Bad is my Coffee?"/>
   <meta property="twitter:description" content="A look into the carbon efficency of making a cup of coffee and a breif review of the book How Bad are Bananas?"/>
   <meta name="author" content="Stephanie Hutson"/>
@@ -185,7 +185,7 @@
     <div>
       <p><a href="signup/">Sign up for our email list!</a></p>
       <p>
-        <b>Have feedback?</b> Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a>
+        <b>Have feedback?</b> Email me at <a href="mailto:stephanie.m.hutson@gmail.com">stephanie.m.hutson@gmail.com</a>
       </p>
     </div>
   </div>
