--- a/the-inner-level-and-inequality/index.html
+++ b/the-inner-level-and-inequality/index.html
@@ -9,10 +9,10 @@
   <meta name="description" content="A look into some of the potential causes of the rise of income inequality beginning in the 1970s with the social and economic impacts outlined in the 2018 book The Inner Level.">
   <meta name="author" content="Stephanie Hutson">
 
-  <meta property="og:image" content="http://sustainable.money/images/productivity_vs_pay.png"/>
+  <meta property="og:image" content="http://sustainablemoney.github.io/images/productivity_vs_pay.png"/>
   <meta property="og:title" content="Income Inequality and The Inner Level"/>
   <meta property="og:description" content="A look into some of the potential causes of the rise of income inequality beginning in the 1970s with the social and economic impacts outlined in the 2018 book The Inner Level."/>
-  <meta property="twitter:image" content="//sustainable.money/images/productivity_vs_pay.png"/>
+  <meta property="twitter:image" content="//sustainablemoney.github.io/images/productivity_vs_pay.png"/>
   <meta property="twitter:title" content="Income Inequality and The Inner Level"/>
   <meta property="twitter:description" content="A look into some of the potential causes of the rise of income inequality beginning in the 1970s with the social and economic impacts outlined in the 2018 book The Inner Level."/>
 
@@ -174,7 +174,7 @@
     <div>
       <p><a href="signup/">Sign up for our email list!</a></p>
       <p>
-        <b>Have feedback?</b> Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a>
+        <b>Have feedback?</b> Email me at <a href="mailto:stephanie.m.hutson@gmail.com">stephanie.m.hutson@gmail.com</a>
       </p>
     </div>
   </div>
